--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,4 +12,5 @@ pytest-mock>=1.7.1, <2.0
 pytest~=6.2
 kedro[pandas.CSVDataSet, pandas.ExcelDataSet, pandas.ParquetDataSet]==0.18.3   # Specify optional Kedro dependencies
 kedro-viz~=5.0                                                                 # Visualise your pipelines
-scikit-learn~=1.0                                                              # For modelling in the data science pipeline
+scikit-learn~=1.0
+kedro[plotly.PlotlyDataSet, plotly.JSONDataSet]==0.18.4                                                              # For modelling in the data science pipeline
